# physX.js

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  build.sh  clean.sh  generate.sh  make.sh  upload_and_replace_wasm.sh
physx/: generate_projects.sh
physx/buildtools/: cmake_generate_projects.py
physx/source/compiler/cmake/emscripten/: CMakeLists.txt  PhysXWebBindings.cmake
physx/source/foundation/include/unix/sse2/: PsUnixSse2InlineAoS.h
physx/source/geomutils/src/gjk/: GuGJKType.h
physx/source/physxwebbindings/src/: BindingHelper.h  PxWebBindings.cpp  SimulationFilterShader.cpp  SimulationFilterShader.h
physx/source/physxwebbindings/src/binding/: ActorBinding.h  ControllerBinding.h  CookingBinding.h  JointBinding.h  MathBinding.h  PVDBinding.h  QueryBinding.h  SceneBinding.h  ShapeBinding.h
