cmake_minimum_required(VERSION 3.19)
project(bullet_wasm)

set(CMAKE_CXX_STANDARD 14)

include_directories(/Users/yangfeng/emsdk/upstream/emscripten/cache/sysroot/include)
include_directories(/Users/yangfeng/Desktop/physX.js/physx/include)
include_directories(/Users/yangfeng/Desktop/physX.js/physx/source/foundation/include)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/common/src/mac)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/include)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/common/include)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/common/src)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/include)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/contact)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/common)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/convex)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/distance)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/sweep)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/gjk)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/intersection)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/mesh)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/hf)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/pcm)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/geomutils/src/ccd)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/physxgpu/include)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/../pxshared/include)
include_directories(/Users/yangfeng/Desktop/PhysX/physx/source/foundation/include)

add_executable(physx_wasm
        wasm_build/PxWebBindings.cpp)
